tests/samples/negative/generics/generic_function_type_arity.ax
module generic_function_type_arity;

fn identity<T>(value: T) -> T {
    return value;
}

fn main() -> i32 {
    let value = identity<i32, bool>(1);
    return 0;
}
